--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,9 @@ terraform.rc
 # Data files
 *.json
 *.csv
+# Default .gitignore content added by dbt Cloud# you shouldn't commit these into source control
+# these are the default directory names, adjust/add to fit your needs
+target/
+dbt_packages/
+logs/
+# end dbt Cloud content
